--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: Feature request 💡
 description: Suggest an idea for this project.
-title: ""
+title: "[Feature request]: "
 labels: ["enhancement"]
 body:
   - type: textarea
